--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby-plugin-manifest": "^2.0.11",
     "gatsby-plugin-offline": "^2.0.18",
     "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-source-filesystem": "^2.0.10",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.9",
@@ -24,6 +24,7 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
+    "react-html-parser": "^2.0.2",
     "react-leaflet": "^2.1.2",
     "react-static-google-map": "^0.5.2",
     "styled-components": "^4.1.2"
