--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "@turf/nearest-point": "^6.0.1",
     "@turf/turf": "^5.1.6",
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.0.60",
     "gatsby-image": "^2.0.22",
     "gatsby-plugin-less": "^2.0.8",
@@ -14,6 +15,7 @@
     "gatsby-plugin-offline": "^2.0.18",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-sharp": "^2.0.17",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.0.10",
     "gatsby-transformer-json": "^2.1.6",
     "gatsby-transformer-sharp": "^2.1.9",
@@ -27,7 +29,7 @@
     "react-html-parser": "^2.0.2",
     "react-leaflet": "^2.1.2",
     "react-static-google-map": "^0.5.2",
-    "styled-components": "^4.1.2"
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
