--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "google-map-react": "^1.1.1",
     "grommet": "^2.0.1",
     "leaflet": "^1.3.4",
+    "less": "^3.9.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-html-parser": "^2.0.2",
     "react-leaflet": "^2.1.2",
     "react-static-google-map": "^0.5.2",
+    "semantic-ui-less": "^2.4.1",
+    "semantic-ui-react": "^0.84.0",
     "styled-components": "^4.1.3"
   },
   "keywords": [
